--- a/folio-app/src/components/TechStack.module.css
+++ b/folio-app/src/components/TechStack.module.css
@@ -3,7 +3,10 @@
   flex-direction: column;
   max-width: 30rem;
   margin: auto;
-  padding-bottom: 1.5rem;
+}
+
+.groupName {
+  margin-top: 0;
 }
 
 .icons {
@@ -13,4 +16,5 @@
   justify-content: center;
   row-gap: 1rem;
   column-gap: 0.5rem;
+  padding-bottom: 1.5rem;
 }
